# webcoder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  nginx.conf  styles.css
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/: api.js  ffmpeg_bridge.js
flatpak/: dev.aligator.webcoder.desktop  dev.aligator.webcoder.metainfo.xml  dev.aligator.webcoder.yml  dev.webcoder.app.desktop  dev.webcoder.app.metainfo.xml  dev.webcoder.app.yml  ffmpeg-host  webcoder-flatpak
frontend/src/: app.rs  core.rs  lib.rs  main.rs
frontend/src/app/: bridge.rs  command_preview.rs  convert.rs  ingest.rs  media.rs  mod.rs  queue.rs  side_rail.rs  state.rs  types.rs  widgets.rs
src/: app.rs  core.rs  lib.rs  main.rs  server.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  native.rs  server.rs
src-tauri/src/server/: auth.rs  error.rs  ffmpeg.rs  handlers.rs  mod.rs
xtask/src/: main.rs
