[package]
name = "webcoder"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Clipboard",
  "DragEvent",
  "Event",
  "File",
  "FileList",
  "HtmlAnchorElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "InputEvent",
  "Url",
  "Navigator",
  "Window",
] }
