[package]
name = "webcoder"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "webcoder"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "time", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
async_zip = { version = "0.0.17", features = ["tokio"] }
futures-lite = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Clipboard",
  "Event",
  "File",
  "FileList",
  "HtmlInputElement",
  "HtmlSelectElement",
  "InputEvent",
  "Navigator",
  "Window",
] }
