[package]
name = "webcoder-frontend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "src-tauri", "xtask"]
resolver = "3"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "webcoder-frontend"
path = "frontend/src/main.rs"

[lib]
path = "frontend/src/lib.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Clipboard",
  "DataTransfer",
  "DragEvent",
  "Event",
  "File",
  "FileList",
  "HtmlInputElement",
  "HtmlSelectElement",
  "InputEvent",
  "Navigator",
  "Storage",
  "Window",
] }
