[package]
name = "webcoder-desktop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "webcoder"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs", "io-util", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }
webcoder-frontend = { path = ".." }
